--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "torch_glare",
-  "private": true,
+  "name": "torch-glare",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
+  "license": "MIT",
   "files": [
     "dist"
   ],
