--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
     "target": "ES2020",
+    "types": [
+      "vitest/globals"
+    ],
     "useDefineForClassFields": true,
     "lib": [
       "ES2020",
@@ -20,11 +23,12 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
   },
   "include": [
     "src",
-    "src/lib"
+    "src/lib",
+    "./test/setup.ts "
   ],
   "references": [
     {
