--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "torch-glare",
   "private": false,
-  "version": "0.0.31",
+  "version": "0.0.32",
   "type": "module",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
@@ -27,7 +27,8 @@
     "@types/react-datepicker": "^6.2.0",
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "torch-glare": "^0.0.32"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.6",
@@ -47,6 +48,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "glob": "^10.4.1",
     "jsdom": "^24.1.0",
+    "rollup-plugin-copy": "^3.5.0",
     "sass": "^1.77.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
