--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "torch-glare",
   "private": false,
-  "version": "0.0.32",
+  "version": "0.0.38",
   "type": "module",
-  "main": "dist/main.js",
-  "types": "dist/main.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "files": [
     "dist"
@@ -24,13 +24,13 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
-    "@types/react-datepicker": "^6.2.0",
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
-    "react-dom": "^18.2.0",
-    "torch-glare": "^0.0.32"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/react-datepicker": "^6.2.0",
+    "torch-glare": "^0.0.38",
     "@babel/preset-env": "^7.24.6",
     "@babel/preset-react": "^7.24.6",
     "@babel/preset-typescript": "^7.24.6",
