change the default layout ,add stories and bug fixes
change the storybook default layout to TORCH layout.

the components are :
- Alerts
- Badges
- Buttons
- CheckBoxes
- Counters
- DatePickers
- DropDowns

bug fix :
- add css box-sizing:border-box for all component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
     "noFallthroughCasesInSwitch": true,
   },
   "include": [
+    "./.storybook/**/*.ts",
     "src",
     "src/lib",
     "./test/setup.ts ",
