--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "remixicon": "^4.3.0"
   },
   "devDependencies": {
