make ts paths and update scss files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,12 +24,29 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "@/*": [
+        "./src/lib/*"
+      ],
+      "@components/*": [
+        "./src/lib/components/*"
+      ],
+      "@hooks/*": [
+        "./src/lib/hooks/*"
+      ],
+      "@styles/*": [
+        "./src/lib/styles/*"
+      ],
+      "@utils/*": [
+        "./src/lib/utils/*"
+      ]
+    }
   },
   "include": [
     "./.storybook/**/*.ts",
     "src",
     "src/lib",
-    "./test/setup.ts ",
+    "./test/setup.ts",
     "test/index.ts"
   ],
   "references": [
