--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "torch-glare",
   "private": false,
-  "version": "0.0.108",
+  "version": "0.0.109",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -29,10 +29,10 @@
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
-    "remixicon": "^4.3.0"
+    "remixicon": "^4.3.0",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
-    "react-dropzone": "^14.2.3",
     "@babel/preset-env": "^7.24.6",
     "@babel/preset-react": "^7.24.6",
     "@babel/preset-typescript": "^7.24.6",
@@ -61,6 +61,7 @@
     "eslint-plugin-storybook": "^0.8.0",
     "glob": "^10.4.1",
     "jsdom": "^24.1.0",
+    "react-dropzone": "^14.2.3",
     "rollup-plugin-copy": "^3.5.0",
     "sass": "^1.77.2",
     "storybook": "^8.2.5",
