--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
+    "@radix-ui/themes": "^3.1.6",
+    "class-variance-authority": "^0.7.1",
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "remixicon": "^4.3.0",
+    "tailwind-merge": "^2.6.0",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
@@ -55,16 +58,19 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.3.0",
     "@vitest/ui": "^1.6.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-storybook": "^0.8.0",
     "glob": "^10.4.1",
     "jsdom": "^24.1.0",
+    "postcss": "^8.4.49",
     "react-dropzone": "^14.2.3",
     "rollup-plugin-copy": "^3.5.0",
     "sass": "^1.77.2",
     "storybook": "^8.2.5",
+    "tailwindcss": "^3.4.17",
     "torch-glare": "^0.0.98",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
