--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-select": "^2.1.4",
@@ -73,7 +76,7 @@
     "glob": "^10.4.1",
     "jsdom": "^24.1.0",
     "postcss": "^8.4.49",
-    "react-dropzone": "^14.2.3",
+    "react-dropzone": "^14.3.5",
     "rollup-plugin-copy": "^3.5.0",
     "sass": "^1.77.2",
     "storybook": "^8.2.5",
