--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "name": "torchcorp",
   "version": "0.0.3",
-  "bin": {
-    "chesty": "./src/torch/bin/cli.js"
-  },
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -12,6 +9,9 @@
     "src/torch/bin",
     "src/torch/templates"
   ],
+  "bin": {
+    "torchcorp": "./src/torch/bin/cli.js"
+  },
   "publishConfig": {
     "access": "public"
   },
