--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "build": "tsc && vite build ",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "prepublishOnly": "yarn build",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "prepublishOnly": "yarn build"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -78,8 +76,5 @@
     "vite": "^5.2.11",
     "vite-plugin-dts": "^3.9.1",
     "vitest": "^1.6.0"
-  },
-  "sideEffects": [
-    "**/*.css"
-  ]
+  }
 }
