--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@headlessui/react": "^2.2.0",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
@@ -43,9 +44,12 @@
     "react": "^18.2.0",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.2.0",
+    "react-mobile-picker": "^1.0.1",
+    "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.1",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "torch-react-mobile-picker": "^1.0.1",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
