--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-mobile-picker": "^1.0.1",
     "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.1",
