--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "torchcorp",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -41,6 +41,7 @@
     "clsx": "^2.1.1",
     "commander": "^13.1.0",
     "date-fns": "^4.1.0",
+    "glare-typography": "^1.0.1",
     "inquirer": "^9.2.15",
     "react": "^18.2.0",
     "react-datepicker": "^8.0.0",
@@ -49,7 +50,6 @@
     "tailwind-merge": "^3.0.1",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "torch-react-mobile-picker": "^1.0.2",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
