--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "clsx": "^2.1.1",
     "commander": "^13.1.0",
     "date-fns": "^4.1.0",
+    "fast-glob": "^3.3.3",
     "glare-themes": "^1.0.0",
     "glare-torch-mode": "^1.0.0",
     "glare-typography": "^1.0.1",
