--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "react-code-blocks": "^0.1.6",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -38,6 +37,8 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tailwindcss/postcss": "^4.0.9",
+    "@tailwindcss/vite": "^4.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "commander": "^13.1.0",
@@ -47,11 +48,12 @@
     "glare-torch-mode": "^1.0.1",
     "glare-typography": "^1.0.2",
     "inquirer": "^9.2.15",
-    "react": "^18.2.0",
+    "react": "^19.0.0",
+    "react-code-blocks": "^0.1.6",
     "react-datepicker": "^8.0.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "tailwind-merge": "^3.0.1",
+    "tailwind-merge": "^3.0.2",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "vite-tsconfig-paths": "^4.3.2"
@@ -63,26 +65,23 @@
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@types/node": "^20.12.12",
-    "@types/react": "^18.3.3",
+    "@types/react": "^19.0.10",
     "@types/react-datepicker": "^6.2.0",
-    "@types/react-dom": "^18.2.22",
+    "@types/react-dom": "^19.0.4",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^4.3.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^1.6.0",
-    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "glob": "^10.4.1",
     "jsdom": "^24.1.0",
-    "postcss": "^8.4.49",
     "react-dropzone": "^14.3.5",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
-    "vite": "^5.2.11",
-    "vite-plugin-dts": "^3.9.1",
-    "vitest": "^1.6.0"
+    "vite": "^6.2.0",
+    "vite-plugin-dts": "^3.9.1"
   }
 }
