--- a/plugins/pluginsFile/torchMode/package.json
+++ b/plugins/pluginsFile/torchMode/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glare-torch-mode",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A Tailwind CSS plugin for make custom look to the Torch Glare components and for the deferent themes like dark, light, default themes.",
   "main": "index.cjs",
   "files": [
@@ -16,7 +16,5 @@
   ],
   "author": "TORCH Corp/Sajjad-iq",
   "license": "MIT",
-  "peerDependencies": {
-    "tailwindcss": "^3.0.0"
-  }
+  "peerDependencies": {}
 }
