--- a/plugins/pluginsFile/typography/package.json
+++ b/plugins/pluginsFile/typography/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glare-typography",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "A Tailwind CSS plugin for custom typography utilities.",
   "main": "index.cjs",
   "files": [
@@ -16,7 +16,5 @@
   ],
   "author": "TORCH Corp/Sajjad-iq",
   "license": "MIT",
-  "peerDependencies": {
-    "tailwindcss": "^3.0.0"
-  }
+  "peerDependencies": {}
 }
