--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^1.6.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -77,9 +78,9 @@
     "glob": "^10.4.1",
     "jsdom": "^24.1.0",
     "next": "15.2.1",
-    "postcss": "^8",
+    "postcss": "^8.5.3",
     "react-dropzone": "^14.3.5",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.12",
     "ts-node": "^10.9.2",
     "typescript": "^5",
     "vite-plugin-dts": "^3.9.1"
