--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,12 +2,13 @@ name: Deploy to Production
 
 on:
   push:
-    branches: [ main ]  # Adjust if you use a different branch
-  workflow_dispatch:    # Allows manual trigger from GitHub UI
+    branches: [ main ]  h
+  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: Production  
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -41,11 +42,14 @@ jobs:
           
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
+      
+      - name: Install missing dependency
+        run: pnpm add embla-carousel-react
         
-      - name: Lint code
+      - name: Lint code  
         run: pnpm lint || true
         
-      - name: Build project
+      - name: Build project  
         run: pnpm build
         
       - name: Deploy to server
@@ -58,7 +62,12 @@ jobs:
           script: |
             cd /home/admin/Torch-Glare-Website
             git pull
-            pnpm install --frozen-lockfile
+            # Install pnpm if not already installed
+            if ! command -v pnpm &> /dev/null; then
+              npm install -g pnpm
+            fi
+            pnpm install --no-frozen-lockfile  # Match local behavior
+            pnpm add embla-carousel-react  # Also install missing dependency on server
             pnpm build
             pm2 restart glare-website || pm2 start npm --name "glare-website" -- run start
             
