--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "clsx": "^2.1.1",
     "commander": "^13.1.0",
     "date-fns": "^4.1.0",
+    "embla-carousel": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "fast-glob": "^3.3.3",
     "glare-themes": "^1.0.5",
     "glare-torch-mode": "^1.0.2",
