--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,8 +50,21 @@ jobs:
         
       - name: Fix TypeScript import extensions
         run: |
-          find ./src -type f -name "*.tsx" -o -name "*.ts" | xargs sed -i 's/from "\(.*\)\.tsx"/from "\1"/g' || true
-          find ./lib -type f -name "*.tsx" -o -name "*.ts" | xargs sed -i 's/from "\(.*\)\.tsx"/from "\1"/g' || true
+          # More thorough fix for import extensions
+          find ./src ./lib -type f -name "*.tsx" -o -name "*.ts" | xargs sed -i 's/from ['"'"'"]\(.*\)\.tsx['"'"'"]/from "\1"/g' || true
+          find ./app -type f -name "*.tsx" -o -name "*.ts" | xargs sed -i 's/from ['"'"'"]\(.*\)\.tsx['"'"'"]/from "\1"/g' || true
+          
+      - name: Set consistent Next.js version
+        run: |
+          # Use exact same Next.js version as remote server
+          pnpm add next@15.1.7
+        
+      - name: Update TypeScript config
+        run: |
+          # Allow importing TypeScript extensions
+          if [ -f tsconfig.json ]; then
+            sed -i 's/"compilerOptions": {/"compilerOptions": {\n    "allowImportingTsExtensions": true,/g' tsconfig.json
+          fi
         
       - name: Lint code
         run: pnpm lint || true
@@ -77,8 +90,8 @@ jobs:
             pnpm add -D @types/react-dom
             
             # Fix TypeScript import extensions on server
-            find ./src -type f -name "*.tsx" -o -name "*.ts" | xargs sed -i 's/from "\(.*\)\.tsx"/from "\1"/g' || true
-            find ./lib -type f -name "*.tsx" -o -name "*.ts" | xargs sed -i 's/from "\(.*\)\.tsx"/from "\1"/g' || true
+            find ./src ./lib -type f -name "*.tsx" -o -name "*.ts" | xargs sed -i 's/from ['"'"'"]\(.*\)\.tsx['"'"'"]/from "\1"/g' 2>/dev/null || true
+            find ./app -type f -name "*.tsx" -o -name "*.ts" | xargs sed -i 's/from ['"'"'"]\(.*\)\.tsx['"'"'"]/from "\1"/g' 2>/dev/null || true
             
             pnpm build
             pm2 restart glare-website || pm2 start npm --name "glare-website" -- run start
