--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,19 +40,25 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
           
-      - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
-      
-      - name: Install missing dependencies
-        run: pnpm add vite
+      - name: Setup SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keygen -l -f ~/.ssh/id_ed25519 || echo "Invalid key format"
+          echo "StrictHostKeyChecking no" > ~/.ssh/config
+          
+      - name: Test SSH Connection
+        run: ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} "echo Connection successful" || echo "SSH connection failed"
         
-      - name: Deploy to server directly
+      - name: Deploy to server
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SERVER_PORT || '22' }}
+          debug: true
           script: |
             cd /home/admin/Torch-Glare-Website
             git pull
@@ -60,8 +66,6 @@ jobs:
               npm install -g pnpm
             fi
             pnpm install --no-frozen-lockfile
-            
-            # Use the server's build which is known to work
             pnpm build
             pm2 restart glare-website || pm2 start npm --name "glare-website" -- run start
             
