--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,25 +40,30 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
           
-      - name: Setup SSH key
+      - name: Install dependencies
+        run: pnpm install --no-frozen-lockfile
+      
+      - name: Install missing dependencies
+        run: pnpm add vite
+        
+      # Added SSH debug steps
+      - name: Debug SSH key
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
-          ssh-keygen -l -f ~/.ssh/id_ed25519 || echo "Invalid key format"
           echo "StrictHostKeyChecking no" > ~/.ssh/config
-          
-      - name: Test SSH Connection
-        run: ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} "echo Connection successful" || echo "SSH connection failed"
+          ssh-keygen -l -f ~/.ssh/id_ed25519 || echo "Invalid SSH key format"
+        continue-on-error: true
         
-      - name: Deploy to server
+      - name: Deploy to server directly
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SERVER_PORT || '22' }}
-          debug: true
+          debug: true # Enable debug mode for SSH connection
           script: |
             cd /home/admin/Torch-Glare-Website
             git pull
@@ -66,6 +71,8 @@ jobs:
               npm install -g pnpm
             fi
             pnpm install --no-frozen-lockfile
+            
+            # Use the server's build which is known to work
             pnpm build
             pm2 restart glare-website || pm2 start npm --name "glare-website" -- run start
             
