--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,52 +46,42 @@ jobs:
       - name: Install missing dependencies
         run: pnpm add vite
         
-      # Added SSH debug steps
-      - name: Debug SSH key
+      - name: Setup and test SSH connection
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          echo "StrictHostKeyChecking no" > ~/.ssh/config
-          ssh-keygen -l -f ~/.ssh/id_ed25519 || echo "Invalid SSH key format"
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          
+          # Configure SSH to not check host keys
+          cat > ~/.ssh/config << 'EOF'
+          Host *
+            StrictHostKeyChecking no
+            UserKnownHostsFile=/dev/null
+          EOF
+          
+          # Debug the key format
+          echo "=== Key fingerprint ==="
+          ssh-keygen -l -f ~/.ssh/id_rsa || echo "Invalid key format"
+          
+          # Try direct connection with verbose output
+          echo "=== Testing SSH connection ==="
+          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} "echo Connection test" || echo "Connection failed"
         continue-on-error: true
         
-      - name: Deploy to server directly
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: ${{ secrets.SERVER_PORT || '22' }}
-          debug: true # Enable debug mode for SSH connection
-          script: |
-            cd /home/admin/Torch-Glare-Website
-            git pull
-            if ! command -v pnpm &> /dev/null; then
-              npm install -g pnpm
-            fi
-            pnpm install --no-frozen-lockfile
-            
-            # Use the server's build which is known to work
-            pnpm build
-            pm2 restart glare-website || pm2 start npm --name "glare-website" -- run start
-            
+      - name: Deploy using SSH command directly
+        run: |
+          ssh -i ~/.ssh/id_rsa ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} "cd /home/admin/Torch-Glare-Website && git pull && pnpm install --no-frozen-lockfile && pnpm build && pm2 restart glare-website || pm2 start npm --name 'glare-website' -- run start"
+        
       - name: Health check
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: ${{ secrets.SERVER_PORT || '22' }}
-          script: |
-            sleep 10
-            if ! curl -s -f http://localhost:3000 > /dev/null; then
-              echo "Health check failed! Application is not responding."
-              echo "Deployment failed at $(date)" >> /home/admin/deploy-errors.log
-              exit 1
-            else
-              echo "Deployment successful at $(date)" >> /home/admin/deploy-success.log
-            fi
+        run: |
+          sleep 10
+          curl -s -f http://${{ secrets.SERVER_HOST }}:3000 > /dev/null
+          if [ $? -eq 0 ]; then
+            echo "Deployment successful!"
+          else
+            echo "Health check failed! Application is not responding."
+            exit 1
+          fi
             
   notify:
     needs: deploy
