Rename glare-cli to glare-ui in package.json and cli.js; refactor components by removing deprecated Article, Dialog, and InputGroup files, and update related components to use new structures. Adjust CheckboxLabel and RadioLabel to improve component composition and styling consistency.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "glare-cli",
+  "name": "glare-ui",
   "version": "1.6.0",
   "type": "module",
   "license": "MIT",
@@ -8,7 +8,7 @@
     "lib"
   ],
   "bin": {
-    "glare-cli": "./glare-cli.js"
+    "glare-ui": "./glare-ui.js"
   },
   "publishConfig": {
     "access": "public"
