--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "glare-ui",
-  "version": "1.0.0",
+  "name": "torch-glare",
+  "version": "1.0.1",
   "type": "module",
   "license": "MIT",
   "files": [
@@ -8,7 +8,7 @@
     "lib"
   ],
   "bin": {
-    "glare-ui": "./glare-ui.js"
+    "torch-glare": "./torch-glare.js"
   },
   "publishConfig": {
     "access": "public"
