--- a/package.json
+++ b/package.json
@@ -19,17 +19,8 @@
     "update": "node ./scripts/updateCompoents.js"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "commander": "^13.1.0",
-    "glare-themes": "^1.0.5",
-    "glare-torch-mode": "^1.0.2",
-    "glare-typography": "^1.0.4",
-    "inquirer": "^9.2.15",
-    "react": "^19.0.0",
-    "tailwind-merge": "^3.0.2",
-    "tailwind-scrollbar-hide": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "inquirer": "^9.2.15"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
