--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "type": "module",
   "license": "MIT",
   "files": [
-    "cli/bin",
+    "dist",
+    "cli",
     "lib"
   ],
   "bin": {
-    "torch-glare": "./torch-glare.js"
+    "torch-glare": "./dist/index.js"
   },
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
-    "build": "next build --no-lint",
+    "build": "tsc",
     "deploy": "node ./scripts/publish/index.js"
   },
   "dependencies": {
@@ -22,7 +23,6 @@
     "inquirer": "^9.2.15"
   },
   "devDependencies": {
-    "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5.0.0"
   }
 }
