Refactor CLI structure: update package.json for new build process, adjust TypeScript configuration paths, and replace deprecated CLI script with improved command imports. Transition utility imports to use .js extensions for consistency.

--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lib"
   ],
   "bin": {
-    "torch-glare": "./dist/index.js"
+    "torch-glare": "dist/bin/index.js"
   },
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -b",
     "deploy": "node ./scripts/publish/index.js"
   },
   "dependencies": {
