--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
         "module": "NodeNext", // Use Node.js module system
         "lib": [
             "ES2020",
-            "ESNext" // ESNext for modern features in Node.js
+            "ESNext", // ESNext for modern features in Node.js
+            "ES2022",
+            "DOM"
         ],
         "declaration": true, // Generate declaration files (.d.ts)
         "declarationMap": true, // Generate source maps for declarations
@@ -35,6 +37,9 @@
         "allowSyntheticDefaultImports": true, // Enables synthetic default imports
         "resolveJsonModule": true, // Allows importing JSON files as modules
         "isolatedModules": true, // Ensures single file transpiling for better compatibility with various tools
+        "types": [
+            "node"
+        ],
         /* Path Aliases (if needed) */
     },
     /* Include only CLI-related source files */
