--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "torch-glare",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "type": "module",
   "license": "MIT",
   "files": [
@@ -18,18 +18,8 @@
     "deploy": "tsc && node ./scripts/publish/index.js"
   },
   "dependencies": {
-    "@radix-ui/react-alert-dialog": "^1.1.7",
-    "@radix-ui/react-avatar": "^1.1.4",
-    "@radix-ui/react-popover": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-tooltip": "^1.2.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "commander": "^13.1.0",
-    "inquirer": "^9.2.15",
-    "react": "^19.1.0",
-    "tailwind-merge": "^3.2.0",
-    "types": "link:@/utils/types"
+    "inquirer": "^9.2.15"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.7",
