--- a/apps/tsconfig.json
+++ b/apps/tsconfig.json
@@ -32,7 +32,8 @@
     "app/next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "tailwind.config.js",
   ],
   "exclude": [
     "node_modules"
