Update TypeScript configuration and Tailwind setup: Add typeRoots to tsconfig.json for improved type resolution, update glare-themes version to 1.0.8 in package.json, and refactor tailwind.config.js to utilize themePlugin from glare-themes while removing the obsolete glareThemes plugin file.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,10 @@
         "allowSyntheticDefaultImports": true, // Enables synthetic default imports
         "resolveJsonModule": true, // Allows importing JSON files as modules
         "isolatedModules": true, // Ensures single file transpiling for better compatibility with various tools
+        "typeRoots": [
+            "./node_modules/@types",
+            "./node_modules"
+        ],
         "types": [
             "node"
         ],
