Remove glare-plugins, glare-themes, glare-torch-mode, and typography plugin files: This commit deletes the associated configuration, source, and documentation files for these plugins as part of a project refactoring effort to streamline the codebase.

--- a/plugins/glareThemes/package.json
+++ b/plugins/glareThemes/package.json
@@ -15,8 +15,5 @@
     "plugin"
   ],
   "author": "TORCH Corp/Sajjad-iq",
-  "license": "MIT",
-  "dependencies": {
-    "glare-themes": "^1.0.5"
-  }
+  "license": "MIT"
 }
