Refactor theme management: Replace `glare-themes` with `mapping-color-system` across the codebase, update related scripts, and enhance the CHANGELOG to reflect these changes. Remove obsolete glare-themes plugin files to streamline the project.

--- a/plugins/mappingColorSystem/package.json
+++ b/plugins/mappingColorSystem/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "glare-themes",
-  "version": "1.0.9",
-  "description": "A Tailwind CSS plugin for torch-glare themes utilities.",
+  "name": "mapping-color-system",
+  "version": "1.0.0",
+  "description": "A Tailwind CSS plugin for mapping system for tailwindcss. ",
   "main": "index.cjs",
   "files": [
     "index.cjs"
