Update package.json to include 'docs' in files array, remove unused torch.json file, and enhance package manager detection to support 'bun'. Refactor tailwindInit function by removing deprecated code and adjusting dependency installation logic.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "files": [
     "dist",
-    "lib"
+    "lib",
+    "docs"
   ],
   "bin": {
     "torch-glare": "dist/bin/index.js"
