--- a/apps/package.json
+++ b/apps/package.json
@@ -46,6 +46,7 @@
     "input-otp": "^1.4.2",
     "mapping-color-system": "^1.0.1",
     "react": "^19.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-code-blocks": "^0.1.6",
     "react-datepicker": "^8.0.0",
     "react-dom": "^19.0.0",
@@ -63,6 +64,7 @@
     "@eslint/eslintrc": "^3",
     "@types/node": "^20.17.19",
     "@types/react": "^19",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
