--- a/apps/package.json
+++ b/apps/package.json
@@ -44,11 +44,13 @@
     "glare-torch-mode": "^1.0.4",
     "glare-typography": "^1.0.4",
     "input-otp": "^1.4.2",
+    "lucide-react": "^0.507.0",
     "mapping-color-system": "^1.0.1",
     "react": "^19.0.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-code-blocks": "^0.1.6",
     "react-datepicker": "^8.0.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.3",
