--- a/apps/package.json
+++ b/apps/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.3",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
