--- a/apps/package.json
+++ b/apps/package.json
@@ -58,6 +58,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "torch-react-mobile-picker": "^1.0.4",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
