--- a/apps/package.json
+++ b/apps/package.json
@@ -53,6 +53,7 @@
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.3",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
